# knowledge-base-assistant

./: Document.md  README.md  pyproject.toml  readme.md  requirements.txt  start_fastapi.sh
app/: main.py
app/api/: api.py  app.py  chat.py  file.py  login.py  permission.py  role.py  user.py
app/core/: chunking.py  database.py  init_db.py
app/core/processor/: __init__.py  base.py  excel_processor.py  word_processor.py
app/core/rag/: chunking.py  embedding.py  qdrant_db.py
app/dependencies/: depends.py  security.py
app/models/: __init__.py  chat_history.py  file.py  knowledge_item.py  permission.py  role.py  user.py
app/schemas/: chat_history.py  file.py  knowledge_item.py  permission.py  role.py  user.py
app/services/crud/: __init__.py  chat_history.py  file.py  knowledge_item.py  permission.py  role.py  user.py
app/utils/: save2minio.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Chat.tsx  Login.tsx
frontend/src/services/: api.ts  authService.ts  chatService.ts  fileService.ts
tests/: test_chat.py  test_file.py  test_login.py  test_permission.py  test_role.py  test_user.py
